--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,19 @@
+/* Colors Pro-tip: Use the Eye Dropper Chrome extension to find the colors used on web pages.
+
+
+Teal color (used for headings and backgrounds): #4aaaa5
+
+Regular font color (used for paragraphs and all text besides the headings): #777777
+
+Main header background color: #ffffff
+
+Main header border color: #cccccc
+
+Footer background color: #666666
+
+Main content background color: #ffffff
+
+Main content border color: #dddddd */
 h1{
     border: solid;
     background-color: #4aaaa5;
@@ -6,3 +22,7 @@ h1{
 }
 p{display:inline;}
 ul{display:inline;color:pink;}
+
+footer{
+border-top: 8px 
+solid #4aaaa5;}
