--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,25 @@ body {
     margin: 0 auto;
     clear: both;
 }
+h1, h2, p {
+    margin-bottom: 20px;
+}
+
+p:last-child {
+    margin-bottom: 0;
+
+}
+
+h1, h2 {font-family: 'Georgia', Times, Times New Roman, serif;
+    font-weight: 700;
+    color: #4aaaa5;}
+
+h1 {font-size: 30px;
+    line-height: 49px;
+    border-bottom: 3px solid #dddddd;
+    padding-bottom: 20px;}
+
+h2 { font-size: 22px; }
 
 #masthead {
         background: #ffffff;
@@ -68,5 +87,26 @@ nav a {
     margin-left: 15px;
     display: inline-block;
     border-left: 1px solid #efefef;
+    padding-left: 15px;
+    line-height: 18px;
+
+}
+
+nav a:first-child{
+    border-left: 0 none;
+
+}
+
+main-container { padding-top: 130px;}
+
+.main-section {
+    background: #fff;
+    padding: 30px;
+    margin: 0 0 40px 0;
+    width: 100%;
+    max-width: 650px;
+    float: left;
+    border: 1px solid #ddd;
+    
 
 }
