--- a/css/style.css
+++ b/css/style.css
@@ -14,11 +14,10 @@ Footer background color: #666666
 Main content background color: #ffffff
 
 Main content border color: #dddddd */
-*{
-    box-sizing: border
-}
+
 
 body {
+    background: url('../images/concrete_seamless.png');
     font-size: 18px;
     line-height: 34px;
     font-family: 'Georgia', Times, Times New Roman, serif,
@@ -107,6 +106,58 @@ main-container { padding-top: 130px;}
     max-width: 650px;
     float: left;
     border: 1px solid #ddd;
+
+
+}
+.auth-image {
+    width: 200px;
+    height: auto;
+    margin-top: 10px;
+    float: left;
+    margin-right: 25px;
+}
+
+footer {
+    background: #666;
+    color: #fff;
+    padding: 30px o;
+    clear: both;
+    border-top: 8px solid #4aaaa5;
+    color: #cccccc;
+    font-size: 12px;
+    text-align: center;
+
+}
+
+.work {width: 274px;
+    overflow: auto;
+    position: relative;
+    float: left;
+    margin: 20px 0 25px;
     
+}
+
+.work:nth-child(even) {
+    margin-right: 40px;
+
+}
+
+.work img {
+    width: 100%;
+    border: 0 none;
+    opacity: .8;
+}
+
+.work h2 {
+    border-bottom: 0;
+    background: #4aaaa5;
+    color: #fff;
+    text-align: center;
+    bottom: 20px;
+    padding: 15px;
+    width: 100%;
+    line-height: 30px;
+    margin-bottom: 0;
+    font-weight: 300;
 
 }
