--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ Main content border color: #dddddd */
 
 
 body {
-    background: url('../images/concrete_seamless.png');
+    background: url(https://sn3301files.storage.live.com/y4pXMg8bvI0aFXxzuALO6Cu7V5MVqmFJeH_nDcbT1N8Hi633E-eEWleAB3SvCd17IelGU15Dp-ELeTETYGqeS7xmKQJXXGCf1ts8jvqZPTTIsQdK-dek9t8Tdh7uRxH61E-9VxmEBUrAjpF1pAifAnEHPOxCHKiaC5Yvs7JdbMxit0GTPL5iJUynyS7utXl9Kwp/concrete_seamless.png?psid=1&width=400&height=400&cropMode=center);
     font-size: 18px;
     line-height: 34px;
     font-family: 'Georgia', Times, Times New Roman, serif,
@@ -58,7 +58,6 @@ h2 { font-size: 22px; }
         color: #ffffff;
         overflow: auto;
         border-bottom: 2px solid #cccccc;
-        position: fixed;
         width: 100%;
 }
 
@@ -71,7 +70,7 @@ h2 { font-size: 22px; }
     text-align: center;
     line-height: 90px;
     color: #ffffff;
-    font-weight: 700;
+    font-weight: 350;
     font-size: 30px;
     text-decoration: none;
 }
@@ -160,4 +159,46 @@ footer {
     margin-bottom: 0;
     font-weight: 300;
 
+}
+
+
+#contact-form ul {
+    margin-bottom: 20px;
+
+}
+
+#contact-form li {
+    margin-bottom: 10px;
+
+}
+
+label,
+input[type=text],
+input[type=email],
+textarea {
+    display: block;
+    width: 100%;
+
+}
+
+input[type=text],
+input[type=email],
+textarea {
+    height: 35px;
+    border: 1px solid #ddd;
+    padding: 0 10px;
+    font-size: 14px;
+}
+
+textarea {
+    height: 200px;
+}
+
+input[type=submit]{
+    background: #4aaaa5;
+    border: 0 none;
+    color: #fff;
+    font-size: 18px;
+    padding: 10px 30px;
+    cursor: pointer;
 }
