--- a/css/style.css
+++ b/css/style.css
@@ -129,7 +129,6 @@ footer {
 }
 
 .work {width: 274px;
-    overflow: auto;
     position: relative;
     float: left;
     margin: 20px 0 25px;
@@ -202,3 +201,64 @@ input[type=submit]{
     padding: 10px 30px;
     cursor: pointer;
 }
+/* Style 2 */
+* {
+    box-sizing: border-box;
+  }
+  ​
+  html,
+  body {
+      height: 100%;
+      margin: 0;
+  }
+  ​
+  h1 {
+    margin-top: 0px;
+  }
+  ​
+  nav a:hover {
+    color: #4aaaa5;
+  }
+  ​
+  #main-container {
+    margin-bottom: 30px;
+  }
+  ​
+  .main-section {
+    margin: 0 auto;
+    overflow: auto;
+    float: none;
+    max-width: 100%;
+  }
+  ​
+  img.spotlight {
+    float: left;
+    margin-right: 20px;
+    height: auto;
+  }
+  ​
+  .work {
+    width: calc(50% - 20px);
+    overflow: hidden;
+  }
+  ​
+  .work h2 {
+    position: absolute;
+    padding: 15px 0px;
+  }
+  ​
+  .work img {
+    display: table-cell;
+    margin: 0 auto;
+    height: 250px !important;
+    width: auto !important;
+  }
+  ​
+  li {
+    list-style: none;
+  }
+  ​
+  input[type=submit] {
+    float: right;
+    margin-top: 15px;
+  }
